Fix overflow-x bug in dialog

--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,7 @@ h1 {
   color: black;
   text-decoration: none;
 }
+
+.dialog-content > div {
+  overflow-x: hidden;
+}
